# strava2notion

./: .env.example  CLAUDE.md  Makefile  pyproject.toml
.claude/: settings.local.json
.github/workflows/: sync.yml
src/strava2notion/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py
src/strava2notion/notion/: __init__.py  client.py  schema.py  sync.py
src/strava2notion/strava/: __init__.py  client.py
strava2notion/: notion.py
tests/: __init__.py
